Bug 296105 - Crash while parsing Twisted-12.0.0 source (twisted/test/test_defer.py)
Summary: Crash while parsing Twisted-12.0.0 source (twisted/test/test_defer.py)
Status: VERIFIED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: git master
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-15 20:44 UTC by Eugene Agafonov
Modified: 2012-03-16 08:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kdevelop debug log (17.48 KB, application/x-bzip)
2012-03-15 20:44 UTC, Eugene Agafonov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Agafonov 2012-03-15 20:44:12 UTC
Created attachment 69653 [details]
kdevelop debug log

kdev-python plugin crashes while parsing  Twisted-12.0.0's twisted/test/test_defer.py

Steps to reproduce:
1. Download Twisted-12.0.0 tarball from http://twistedmatrix.com/trac (direct link http://pypi.python.org/packages/source/T/Twisted/Twisted-12.0.0.tar.bz2#md5=cf49a8676c21c50faf1b42b528049471) and unpack
2. Start clean kdevelop session with 'kdevelop -cs crashtest'
3. Import twisted source as "Generic Progect Manager" (propject's type doesn't matter actually)
4. Wait until background parsing is finished.

EXPECTED:
background parsing is successfully finished,  kdevelop stops flooding konsole with debug output

ACTUAL OUTCOME:
kdevelop crashes while parsing "path_to_twisted/Twisted-12.0.0/twisted/test/test_defer.py"

Yet another observation: console log contains a lot of lines like this:
kdevelop(23943)/kdevelop (python support) Python::DeclarationBuilder::visitVariableDeclaration: cannot create variable declaration for non-name AST, this is a programming error

kdevelop&Co is build from master:
kdev-python commit:72009853b804d06816516776f6e8896f0b8d9c28)
kdevplatform commit:c769ff9c24b7c0f670d84fb8d11ea4bfd2749c43)
kdevelop commit:61038becaf829090ff5b018f5710a6fe28798611

Same crash was observer on upcoming kdevelop release (kdevelop-4.3, kdevplatform-1.3 brances) and some quite old kdev-python support

A complete kdevelop debug log is attached

PS: Twisted  is a great python project to test stability of kdev-python ;-)
Comment 1 Sven Brauch 2012-03-15 22:00:32 UTC
I can reproduce this, I'll look what causes it.
You can turn off the debug output in kdebugdialog, this will also speed up the application greatly. :)
Comment 2 Sven Brauch 2012-03-16 00:46:19 UTC
Git commit dbcae73461ee5f80ea824ce014870c52af741e1a by Sven Brauch.
Committed on 16/03/2012 at 01:45.
Pushed by brauch into branch 'master'.

Fix a crash bug related to alias declarations

M  +8    -3    duchain/declarationbuilder.cpp
M  +5    -0    example_ast.py

http://commits.kde.org/kdev-python/dbcae73461ee5f80ea824ce014870c52af741e1a
Comment 3 Eugene Agafonov 2012-03-16 08:03:27 UTC
Confirm!
No more crashes while parsing Twisted 12 and 11.1

Thanks!