Fix a crash bug related to alias declarations

BUG:296105